# fms-api/src/main/java/pl/jania1857/fmsapi/dto/CreateVehicleRequest.java
@@ -13,6 +13,7 @@ public record CreateVehicleRequest(
         String vin,
         FuelType fuelType,
         Integer displacement,
+        String fuelCardNumber,
 
         Integer mileage,
 
